--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
     <header>
       <div class="logo">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
-        
-
+      </div>
+      <nav>
+        <span><a>Mission</a></span>
+        <span><a>Featured Tea</a></span>
+        <spam></a>Locations</a></span>
+      </nav>
     </header>
 
   </body>
