Added comment to html.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <!--Header Section-->
 
+    <!--Need to find out why logo is not popping up on webpage with link that is associated in img=src, after work tomorrow make this the first priority.-->
+
     <header>
       <div class="logo">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
