Adding the headers in the body

--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
     <!--Header Section-->
 
     <!--Need to find out why logo is not popping up on webpage with link that is associated in img=src, after work tomorrow make this the first priority.-->
-
     <header>
       <div class="logo">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
       </div>
       <nav>
-        <span><a>Mission</a></span>
-        <span><a>Featured Tea</a></span>
-        <spam></a>Locations</a></span>
+        <span><strong>Mission</strong></span>
+        <span><strong>Featured Tea</strong></span>
+        <span><strong>Locations</strong></span>
       </nav>
     </header>
+
+  <!--Middle Section of the page-->
+
+    <h2>Our Mission</h2>
+    <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    <h2>Tea of the Month</h2>
+    <h4>What's Steeping at the Tea Cozy?</h4>
 
   </body>
 </html>
