--- a/index.html
+++ b/index.html
@@ -25,8 +25,23 @@
 
     <h2>Our Mission</h2>
     <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+
+  <!--Third Half of the Page-->
+
     <h2>Tea of the Month</h2>
     <h4>What's Steeping at the Tea Cozy?</h4>
+    <h4>Fall Berry Blitz Tea</h4>
+    <h4>Spiced Rum Tea</h4>
+    <h4>Seasonal Donuts</h4>
+    <h4>Myrtle Ave Tea</h4>
+    <h4>Bedford Bizarre Tea</h4>
+
+  <!--Fourth Section of the Page-->
+
+
+
+  <!--Footer of Page-->
+
 
   </body>
 </html>
