Added background image and syntax to main.css.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Tea Cozy</title>
     <link rel="stylesheet"  href="./resources/main.css" type="text/css">
   </head>
-  <body>
+  <body background="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg">
 
     <!--Header Section-->
 
