--- a/index.html
+++ b/index.html
@@ -11,29 +11,39 @@
 
     <!--Need to find out why logo is not popping up on webpage with link that is associated in img=src, after work tomorrow make this the first priority.-->
     <header>
-      <div class="logo">
+      <div id="logo">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
       </div>
       <nav>
-        <span><strong>Mission</strong></span>
-        <span><strong>Featured Tea</strong></span>
-        <span><strong>Locations</strong></span>
+        <span>Mission</span>
+        <span>Featured Tea</span>
+        <span>Locations</span>
       </nav>
     </header>
 
   <!--Middle Section of the page-->
 
-    <h2>Our Mission</h2>
-    <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-
+    <div id="mission">
+      <h2>Our Mission</h2>
+      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    </div>
   <!--Third Half of the Page-->
 
     <h2>Tea of the Month</h2>
     <h4>What's Steeping at the Tea Cozy?</h4>
+
     <h4>Fall Berry Blitz Tea</h4>
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg">
+
     <h4>Spiced Rum Tea</h4>
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg">
+
     <h4>Seasonal Donuts</h4>
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
+
     <h4>Myrtle Ave Tea</h4>
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
+    
     <h4>Bedford Bizarre Tea</h4>
 
   <!--Fourth Section of the Page-->
