Changed the height and width dimensions of the pictures.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
     <!--Header Section-->
 
-    <!--Need to find out why logo is not popping up on webpage with link that is associated in img=src, after work tomorrow make this the first priority.-->
     <header>
       <div id="logo">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
@@ -29,22 +28,28 @@
     </div>
   <!--Third Half of the Page-->
 
+  <div id="month">
     <h2>Tea of the Month</h2>
-    <h4>What's Steeping at the Tea Cozy?</h4>
+      <h4>What's Steeping at the Tea Cozy?</h4>
+  </div>
 
-    <h4>Fall Berry Blitz Tea</h4>
+  <div id="firstpic">
     <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg">
+  </div>
+    <h4>Fall Berry Blitz Tea</h4>
 
-    <h4>Spiced Rum Tea</h4>
     <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg">
+      <h4>Spiced Rum Tea</h4>
 
-    <h4>Seasonal Donuts</h4>
     <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
+      <h4>Seasonal Donuts</h4>
 
-    <h4>Myrtle Ave Tea</h4>
     <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
-    
-    <h4>Bedford Bizarre Tea</h4>
+      <h4>Myrtle Ave Tea</h4>
+
+    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
+      <h4>Bedford Bizarre Tea</h4>
+  </div>
 
   <!--Fourth Section of the Page-->
 
