--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
       <div id="logo">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
       </div>
-      <nav>
-        <span>Mission</span>
-        <span>Featured Tea</span>
-        <span>Locations</span>
-      </nav>
+
+      <div id="menu">
+        <nav>
+          <span>Mission</span>
+          <span>Featured Tea</span>
+          <span>Locations</span>
+        </nav>
+      </div>
+
     </header>
 
   <!--Middle Section of the page-->
@@ -26,6 +30,7 @@
       <h2>Our Mission</h2>
       <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
     </div>
+
   <!--Third Half of the Page-->
 
   <div id="month">
