--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
-    <meta charset="utf-8">
     <title>Tea Cozy</title>
     <link rel="stylesheet"  href="./resources/main.css" type="text/css">
   </head>
-  <body background="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg">
+
 
     <!--Header Section-->
+  <body>
 
-    <header>
-      <div id="logo">
+    <div id="header">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
-      </div>
+    </div>
 
       <div id="menu">
         <nav>
-          <span>Mission</span>
-          <span>Featured Tea</span>
-          <span>Locations</span>
+          <span><u>Mission</u></span>
+          <span><u>Featured Tea</u></span>
+          <span><u>Locations</u></span>
         </nav>
       </div>
-
-    </header>
 
   <!--Middle Section of the page-->
 
