Background and header are complete and good to go. Woeking one third half of the page.

--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
 
   <!--Middle Section of the page-->
 
+<div id="background">
+  <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg">
+</div>
     <div id="mission">
       <h2>Our Mission</h2>
       <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+
     </div>
 
   <!--Third Half of the Page-->
