--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Tea Cozy</title>
-    <link rel="stylesheet"  href="./resources/main.css" type="text/css">
-  </head>
-
+<head>
+  <title>Tea Cozy</title>
+  <link rel="stylesheet"  href="./resources/main.css" type="text/css">
+</head>
+<body>
 
     <!--Header Section-->
-  <body>
 
+  <header>
     <div id="header">
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png">
     </div>
@@ -20,6 +20,7 @@
           <span><u>Locations</u></span>
         </nav>
       </div>
+  </header>
 
   <!--Middle Section of the page-->
 
@@ -35,26 +36,27 @@
 
   <!--Third Half of the Page-->
 
-  <div id="month">
+  <div class="teas">
+  <div class="month">
     <h2>Tea of the Month</h2>
       <h4>What's Steeping at the Tea Cozy?</h4>
   </div>
 
-  <div id="firstpic">
-    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg">
+  <div class="firstpic">
+    <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg">
   </div>
   <h4>Fall Berry Blitz Tea</h4>
 
-    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg">
+    <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg">
       <h4>Spiced Rum Tea</h4>
 
-    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
+    <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
       <h4>Seasonal Donuts</h4>
 
-    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
+    <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
       <h4>Myrtle Ave Tea</h4>
 
-    <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
+    <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
       <h4>Bedford Bizarre Tea</h4>
   </div>
 
