--- a/index.html
+++ b/index.html
@@ -42,23 +42,32 @@
       <h4>What's Steeping at the Tea Cozy?</h4>
   </div>
 
-  <div class="firstpic">
+  <div class="teaimagesspacing">
+  <div class="teas">
     <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg">
   </div>
-  <h4>Fall Berry Blitz Tea</h4>
+    <figcaption><h4>Fall Berry Blitz Tea</h4></figcaption>
 
+  <div class="teas">
     <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg">
-      <h4>Spiced Rum Tea</h4>
-
-    <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
-      <h4>Seasonal Donuts</h4>
-
-    <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
-      <h4>Myrtle Ave Tea</h4>
-
-    <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
-      <h4>Bedford Bizarre Tea</h4>
   </div>
+      <figcaption><h4>Spiced Rum Tea</h4></figcaption>
+
+  <div class="teas">
+    <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
+  </div>
+      <figcaption><h4>Seasonal Donuts</h4></figcaption>
+
+  <div class="teas">
+    <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
+  </div>
+      <figcaption><h4>Myrtle Ave Tea</h4></figcaption>
+
+  <div=class"teas">
+    <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
+  </div>
+      <figcaption><h4>Bedford Bizarre Tea</h4></figcaption>
+
 
   <!--Fourth Section of the Page-->
 
