Added footer to html.

--- a/index.html
+++ b/index.html
@@ -31,50 +31,87 @@
     <div id="mission">
       <h2>Our Mission</h2>
       <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
-
     </div>
 
   <!--Third Half of the Page-->
 
-  <div class="teas">
-  <div class="month">
+
     <h2>Tea of the Month</h2>
-      <h4>What's Steeping at the Tea Cozy?</h4>
-  </div>
+    <h4>What's Steeping at the Tea Cozy?</h4>
 
-  <div class="teaimagesspacing">
-  <div class="teas">
+<div class="teaimagesspacing">
+  <div class-"teas">
     <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg">
-  </div>
     <figcaption><h4>Fall Berry Blitz Tea</h4></figcaption>
+  </div>
+</div>
 
+<div class="teaimagespacing">
   <div class="teas">
     <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg">
+    <figcaption><h4>Spiced Rum Tea</h4></figcaption>
   </div>
-      <figcaption><h4>Spiced Rum Tea</h4></figcaption>
+</div>
 
+<div class="teaimagespacing">
   <div class="teas">
     <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg">
+    <figcaption><h4>Seasonal Donuts</h4></figcaption>
   </div>
-      <figcaption><h4>Seasonal Donuts</h4></figcaption>
+</div>
 
+
+<div class="teaimagespacing">
   <div class="teas">
     <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg">
+    <figcaption><h4>Myrtle Ave Tea</h4></figcaption>
   </div>
-      <figcaption><h4>Myrtle Ave Tea</h4></figcaption>
+</div>
 
+<div class="teaimagespacing">
   <div=class"teas">
     <img class="teapictures" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg">
+    <figcaption><h4>Bedford Bizarre Tea</h4></figcaption>
   </div>
-      <figcaption><h4>Bedford Bizarre Tea</h4></figcaption>
-
+</div>
+  </div>
 
   <!--Fourth Section of the Page-->
 
+  <div class="locations">
+    <img class="locationpic" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg">
+    <h2>Locations</h2>
+  </div>
 
+  <div class="location1">
+    <h3>Downtown</h3>
+    <p>384 West 4th St</p>
+    <p>Suite 108</p>
+    <p>Portland, Maine</p>
+  </div>
 
+  <div class="location2">
+    <h3>East Bayside</h3>
+    <p>3433 Phisherman's Avenue</p>
+    <p>(Northwest Corner)</p>
+    <p>Portland, Maine</p>
+  </div>
+
+  <div class="location3">
+    <h3>Oakdale</h3>
+    <p>515 Crescent Avenue</p>
+    <p>Second Floor</p>
+    <p>Portland, Maine</p>
+    
   <!--Footer of Page-->
 
+  <h2>The Tea Cozy</h2>
+  <h5>contact@theteacozy.com</h5>
+  <h5>917-555-8904</h5>
+
+  <div class="copyright">
+    <h1>copyright The Tea Cozy 2017</h1>
+  </div>
 
   </body>
 </html>
