--- a/index.html
+++ b/index.html
@@ -84,25 +84,38 @@
   </div>
 
   <div class="location1">
+    <div class="locate">
+      <div class="text-content">
     <h3>Downtown</h3>
-    <p>384 West 4th St</p>
-    <p>Suite 108</p>
-    <p>Portland, Maine</p>
+    <p class="address">384 West 4th St</p>
+    <p class="address">Suite 108</p>
+    <p class="address">Portland, Maine</p>
+      </div>
+    </div>
   </div>
 
   <div class="location2">
+    <div class="locate">
+      <div class="text-content">
     <h3>East Bayside</h3>
-    <p>3433 Phisherman's Avenue</p>
-    <p>(Northwest Corner)</p>
-    <p>Portland, Maine</p>
+    <p class="address">3433 Phisherman's Avenue</p>
+    <p class="address">(Northwest Corner)</p>
+    <p class="address">Portland, Maine</p>
+      </div>
+    </div>
   </div>
 
   <div class="location3">
+    <div class="locate">
+    <div class="text-content">
     <h3>Oakdale</h3>
-    <p>515 Crescent Avenue</p>
-    <p>Second Floor</p>
-    <p>Portland, Maine</p>
-    
+    <p class="address">515 Crescent Avenue</p>
+    <p class="address">Second Floor</p>
+    <p class="address">Portland, Maine</p>
+      </div>
+    </div>
+  </div>
+
   <!--Footer of Page-->
 
   <h2>The Tea Cozy</h2>
