--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     <h2>Locations</h2>
   </div>
 
+  <div id="location1">
   <div class="location1">
     <div class="locate">
       <div class="text-content">
@@ -107,7 +108,7 @@
 
   <div class="location3">
     <div class="locate">
-    <div class="text-content">
+      <div class="text-content">
     <h3>Oakdale</h3>
     <p class="address">515 Crescent Avenue</p>
     <p class="address">Second Floor</p>
