--- a/index.html
+++ b/index.html
@@ -28,16 +28,20 @@
   <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg">
 </div>
 
-    <div id="mission">
+  <div id="mission">
+    <div class="content">
       <h2>Our Mission</h2>
       <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
     </div>
+  </div>
 
   <!--Third Half of the Page-->
 
 
     <h2>Tea of the Month</h2>
     <h4>What's Steeping at the Tea Cozy?</h4>
+
+<div class= "flex-container">
 
 <div class="teaimagesspacing">
   <div class-"teas">
@@ -74,7 +78,8 @@
     <figcaption><h4>Bedford Bizarre Tea</h4></figcaption>
   </div>
 </div>
-  </div>
+  
+</div>
 
   <!--Fourth Section of the Page-->
 
