Added background color/box to locations.

--- a/index.html
+++ b/index.html
@@ -84,44 +84,36 @@
 
   <!--Fourth Section of the Page-->
 
-  <div class="locations">
-    <img class="locationpic" src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-locations-background.jpg">
-    <h2>Locations</h2>
-  </div>
+<div class="flex-container">
 
-  <div id="location1">
-  <div class="location1">
-    <div class="locate">
-      <div class="text-content">
+  <div class="teacup">
+    <h2><span>Locations</span></h2>
+
+<div class="location">
+
+<div id="location1">
     <h3>Downtown</h3>
-    <p class="address">384 West 4th St</p>
-    <p class="address">Suite 108</p>
-    <p class="address">Portland, Maine</p>
-      </div>
-    </div>
-  </div>
+    <p>384 West 4th St</p>
+    <p>Suite 108</p>
+    <p>Portland, Maine</p>
+</div>
 
-  <div class="location2">
-    <div class="locate">
-      <div class="text-content">
+<div id="location2">
     <h3>East Bayside</h3>
-    <p class="address">3433 Phisherman's Avenue</p>
-    <p class="address">(Northwest Corner)</p>
-    <p class="address">Portland, Maine</p>
-      </div>
-    </div>
-  </div>
+    <p>3433 Phisherman's Avenue</p>
+    <p>(Northwest Corner)</p>
+    <p>Portland, Maine</p>
+</div>
 
-  <div class="location3">
-    <div class="locate">
-      <div class="text-content">
+<div id="location3">
     <h3>Oakdale</h3>
-    <p class="address">515 Crescent Avenue</p>
-    <p class="address">Second Floor</p>
-    <p class="address">Portland, Maine</p>
-      </div>
-    </div>
+    <p>515 Crescent Avenue</p>
+    <p>Second Floor</p>
+    <p>Portland, Maine</p>
+</div>
+
   </div>
+</div>
 
   <!--Footer of Page-->
 
