Changed flex property to flex instead of block.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
 
 <div class="teacup">
     <h2><span>Locations</span></h2>
-  <div class="location">
+
+<div class="locations">
 
 <div id="location1">
     <h3>Downtown</h3>
@@ -114,9 +115,13 @@
 
   <!--Footer of Page-->
 
+<div class="footer">
+
   <h2>The Tea Cozy</h2>
   <h5>contact@theteacozy.com</h5>
   <h5>917-555-8904</h5>
+
+</div>
 
   <div class="copyright">
     <h1>copyright The Tea Cozy 2017</h1>
